test/resources/parser/failing/EmptyMatchBody.scala
object Match {
    1 match {}
}